--- a/gomoku/js/src/game.css
+++ b/gomoku/js/src/game.css
@@ -2,7 +2,7 @@
     min-width: 990px;
     max-width: 1080px;
     position: relative;
-    margin: 0 auto;
+    margin: auto;
     z-index: 1;
     background: #fff;
     min-height: 990px;
@@ -31,8 +31,8 @@
 
 #board-grid{
     display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
     position: absolute;
     top: 0;
     left: 0;
@@ -48,18 +48,23 @@
 }
 
 .empty-cell{
-    border: 1px solid rgb(165, 120, 78);
+    border: 1px solid rgb(0, 0, 0);
     background-color: rgb(209, 60, 60);
 }
 
 .whitepiece-cell{
-    border : 1px solid rgb(255, 255, 255);
-    background-color: rgb(209, 60, 60);
+    border : 1px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 
-.sblackpiece-cell{
+.blackpiece-cell{
     border: 1px solid rgb(0, 0, 0);
-    background-color: rgb(209, 60, 60);
+    background-color: rgb(0, 0, 0);
+}
+
+.clickable-piece:hover{
+    background-color: blue;
+    cursor: pointer;
 }
 
 .clickable-cell:hover{
